unpackaged/main/default/objects/cmbls__Loan_Servicing_Settings__c/cmbls__Loan_Servicing_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Loan Servicing Settings</label>
</CustomObject>