unpackaged/main/default/objects/cmbls__Loan_Servicing_Settings__c/fields/Automatic_Transfer_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Automatic_Transfer_Batch_Size__c</fullName>
    <label>Automatic Transfer Batch Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>