unpackaged/main/default/objects/cmbls__Loan_Servicing_Settings__c/fields/Enable_Automatic_Transfers__c.field-meta.xml
<CustomField>
    <fullName>Enable_Automatic_Transfers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Quick Bridge loans will be automatically transferred to National Funding.</description>
    <inlineHelpText>Quick Bridge loans will be automatically transferred to National Funding.</inlineHelpText>
    <label>Enable Automatic Transfers</label>
    <type>Checkbox</type>
</CustomField>