unpackaged/main/default/objects/cmbls__Loan_Servicing_Settings__c/fields/National_Funding_Fund_Id__c.field-meta.xml
<CustomField>
    <fullName>National_Funding_Fund_Id__c</fullName>
    <inlineHelpText>National Funding’s ‘Fund’ record to transfer loans</inlineHelpText>
    <label>National Funding Fund Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>