unpackaged/main/default/objects/cmbls__Loan_Servicing_Settings__c/fields/RSNextPaymentDateBatch_Size__c.field-meta.xml
<CustomField>
    <fullName>RSNextPaymentDateBatch_Size__c</fullName>
    <label>RSNextPaymentDateBatch Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>